Add initial gallery page layout and edits on things i love page

--- a/things i love.html
+++ b/things i love.html
@@ -59,6 +59,10 @@
     </ul>
     <p>These are just a few of the things that I love. Each one brings a unique joy and enriches my life in different ways. If you want to see these passions come alive visually, don't miss my <a href="gallery.html">Gallery page</a>—it's full of photos and moments that capture my world!</p>
     <p>Thank you for visiting!</p>
+    <div>
+        If any of this speaks to you, I'd really love to hear from you! 
+        <a href="contact.html">Say hi 👋</a>
+    </div>
 
     <footer>
         <p>&copy; 2025 Hasset Maemer. All rights reserved.</p>
