Enhance "Things I Love" page with additional content and images

--- a/things i love.html
+++ b/things i love.html
@@ -40,22 +40,29 @@
     <ul>
         <li>Spending Time with Loved Ones</li>
             <p>Spending time with my family and hanging out with friends is something I thrive on.</p>
+            <img src="images/talking.jpg" alt="group of friends having a good time">
          <li>Rest and sleep</li>
-            <p> I also have a phase where I just want to be alone and recharge and mainly sleep.</p>
+            <p> I also have a phase where I just want to be alone and recharge.</p>
+            <img src="images/relaxing.jpg" alt="a woman relaxing in her room">
         <li>Challenges</li>
             <p>Also, I love facing challenges not because i like the struggle but because i deeply love the feeling of accomplishment after overcoming them. 
                 And while doing them, the dreaming of the accomplishment and satisfucstion keeps me going.</p>
             <p>I did it. I love the feeling "I did it".</p>
-        <li>Movies</li>
-            <p>And like a hobby, or you can say that's the first thing I do to relax from any kind of stressfull situation, I love watching movies.
-                I treat myself with movies as a prize after my little accomplishments.</p>
+            <img src="images/challanges.png" alt="A woman very excited after overcoming a challenge">
+            <li>Movies</li>
+            <p> <div>And like a hobby, or you can say that's the first thing I do to relax from any kind of stressfull situation, I love watching movies.</div>
+                <div>I treat myself with movies as a prize after my little accomplishments.</div></p>
+                <img src="images/1.jpg" alt="movies poster">
         <li>Traveling</li>
                 <p> I love traveling and exploring new places, but I also love the comfort of my home.</p>
+                <img src="images/travel.jpg" alt="Woman on a boat">
         <li>Experimenting with Food</li>
                 <p> I love trying new foods and experimenting in the kitchen.</p>
+                <img src="images/cooking 2.jpg" alt="cooking">
         <li>Nature</li>
         <li>Photography</li>
             <p>I love taking photos and capturing moments.</p>
+            <img src="images/photography.png" alt="Taking pictures">
     </ul>
     <p>These are just a few of the things that I love. Each one brings a unique joy and enriches my life in different ways. If you want to see these passions come alive visually, don't miss my <a href="gallery.html">Gallery page</a>—it's full of photos and moments that capture my world!</p>
     <p>Thank you for visiting!</p>
