Add description and images of favorite movies and series to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,27 @@
             <img src="images/instagram.jpg" alt="Instagram" width="30" height="30"></a>
         </nav>
     </header>
+    <section>
+        <div>
+            Here are some of my favorite movies and series that I love to watch.
+        </div>
+        <img src="images/friends.jpg" alt="Friends TV Show">
+        <img src="images/tsip.jpg" alt="The summer I turned pretty">
+        <img src="images/big bang.jpg" alt="The Big Bang Theory">
+        <img src="images/gg.jpg" alt="Gimy and Georgie">
+        <img src="images/legally blone.jpg" alt="Legally Blonde">
+        <img src="images/after.jpg" alt="After Series">
+        <img src="images/13.jpg" alt="Thirteen Reasons Why">
+        <img src="images/Comming2A.jpg" alt="Coming 2 America">
+        <img src="images/home alone.jpg" alt="Home Alone">
+        <img src="images/meb4u.jpg" alt="Me Before You">
+        <img src="images/rush hour.jpg" alt="Rush Hour">
+        <img src="images/squid game.jpg" alt="Squid Game">
+        <img src="images/TD.jpg" alt="Truth or Dare">
+        <img src="images/the notebook.jpg" alt="The Notebook">
+        <img src="images/titanic.jpg" alt="Titanic">
+        <img src="images/all.jpg" alt="All of us are dead">
+    </section>
     <footer>
         <p>&copy; 2025 Hasset Maemer. All rights reserved.</p>
         <nav>
