Update images on "Things I Love" page for better representation

--- a/things i love.html
+++ b/things i love.html
@@ -43,7 +43,7 @@
             <img src="images/talking.jpg" alt="group of friends having a good time">
          <li>Rest and sleep</li>
             <p> I also have a phase where I just want to be alone and recharge.</p>
-            <img src="images/relaxing.jpg" alt="a woman relaxing in her room">
+            <img src="images/relaxing2.jpg" alt="a woman relaxing in her room">
         <li>Challenges</li>
             <p>Also, I love facing challenges not because i like the struggle but because i deeply love the feeling of accomplishment after overcoming them. 
                 And while doing them, the dreaming of the accomplishment and satisfucstion keeps me going.</p>
@@ -52,7 +52,7 @@
             <li>Movies</li>
             <p> <div>And like a hobby, or you can say that's the first thing I do to relax from any kind of stressfull situation, I love watching movies.</div>
                 <div>I treat myself with movies as a prize after my little accomplishments.</div></p>
-                <img src="images/1.jpg" alt="movies poster">
+                <img src="images/1.png" alt="movies poster">
         <li>Traveling</li>
                 <p> I love traveling and exploring new places, but I also love the comfort of my home.</p>
                 <img src="images/travel.jpg" alt="Woman on a boat">
