--- a/about me.html
+++ b/about me.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="about me.css">
+    <link rel="stylesheet" href="Styles/about me.css">
 </head>
 <body>
    <nav>
