--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="Styles/home.css">
 </head>
 <body>
-    <nav>
+    <nav class="navigation">
         <a href="home.html">Home</a>
         <a href="about me.html">About Me</a>
         <a href="things i love.html">Things I Love</a>
