Refactor social media links to use Font Awesome icons across all pages; enhance responsiveness with media queries; unify navigation styles; improve hover effects for social icons; and update contact forms for better user experience.

--- a/things i love.html
+++ b/things i love.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Things I Love</title>
     <link rel="stylesheet" href="Styles/things i love.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <nav>
@@ -15,18 +16,13 @@
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </span>
-        <span class="social-links">
-            <a href="mailto:adugnahasset@gmail.com" title="Email">
-                <img src="images/email.jpg" alt="email"></a>
-            <a href="https://github.com/Hassetam" target="_blank" title="GitHub">
-                <img src="images/github.jpg" alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" title="LinkedIn">
-                <img src="images/linkedin.jpg" alt="LinkedIn"></a>
-            <a href="https://t.me/mamaa15" target="_blank" title="Telegram">
-                <img src="images/telegram.jpg" alt="Telegram"></a>
-            <a href="https://www.instagram.com/hassuki.15/" target="_blank" title="Instagram">
-                <img src="images/instagram.jpg" alt="Instagram"></a>
-        </span>
+        <div class="social-icons">
+        <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
+        <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+    </div>
     </nav>
 
     <header>
