Update navigation links to point to index.html for consistency across all pages

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <span class="header-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about me.html">About Me</a>
                 <a href="things i love.html">Things I Love</a>
                 <a href="gallery.html">Gallery</a>
