--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <div class="header-links">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="things i love.html">Things I Love</a>
       <a href="gallery.html">Gallery</a>
