--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <span class="header-links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about me.html">About Me</a>
             <a href="things i love.html">Things I Love</a>
             <a href="gallery.html">Gallery</a>
