--- a/things i love.html
+++ b/things i love.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Navigation bar and social icons are below. Main content starts after this section. -->
     <nav>
         <span class="header-links">
             <a href="index.html">Home</a>
@@ -24,7 +25,7 @@
         <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
     </div>
     </nav>
-
+    <!-- Main content starts here -->
     <header>
         <h1>Things I Love</h1>
         <p>Here I share my passions and interests that bring joy and meaning to my life. Explore my world!</p>
@@ -102,15 +103,27 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Hasset Maemer. All rights reserved.</p>
-        <span class="footer-links">
-            <a href="mailto:adugnahasset@gmail.com"><img src="images/email.jpg" alt="email"></a>
-            <a href="https://github.com/Hassetam" target="_blank"><img src="images/github.jpg" alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
-            <a href="https://t.me/mamaa15" target="_blank"><img src="images/telegram.jpg" alt="Telegram"></a>
-            <a href="https://www.instagram.com/hassuki.15/" target="_blank"><img src="images/instagram.jpg" alt="Instagram"></a>
-        </span>
-    </footer>
+ <!-- Footer with copyright and social icons-->
+   <footer>
+        <div class="footer-text">
+            &copy; 2025 Hasset Maemer. All rights reserved.
+        </div>
+
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="about me.html">About Me</a>
+            <a href="things i love.html">Things I Love</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
+        <div class="social-icons">
+            <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
+            <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+</footer>
 </body>
 </html>
