--- a/about me.html
+++ b/about me.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="Styles/about me.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
 </head>
 <body>
     <nav>
@@ -50,39 +52,43 @@
             <p>Now that you know me a little better, explore the things I love and see what makes life exciting for me.</p>
         </section>
 
-      <section class="about-card full-image-card">
-    <div class="card-left">
-        <dl>
-            <dt>Sneak Peek: </dt>
-            <dd>I love movies and you might get some recommendations</dd>
-        </dl>
-    </div>
-    <div class="card-right">
-        <p class="image-text">Click the picture if you want to see</p>
-        <a href="gallery.html" class="image-button">
-            <img src="images/button.jpg" alt="Gallery Image">
-        </a>
-    </div>
-</section>
+        <section class="about-card full-image-card">
+            <div class="card-left">
+                <dl>
+                    <dt>Sneak Peek: </dt>
+                    <dd>I love movies and you might get some recommendations</dd>
+                </dl>
+            </div>
+            <div class="card-right">
+                <p class="image-text">Click the picture if you want to see</p>
+                <a href="gallery.html" class="image-button">
+                    <img src="images/button.jpg" alt="Gallery Image">
+                </a>
+            </div>
+        </section>
+            </main>
 
+    <!-- Footer with copyright and social icons-->
+   <footer>
+        <div class="footer-text">
+            &copy; 2025 Hasset Maemer. All rights reserved.
+        </div>
 
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="about me.html">About Me</a>
+            <a href="things i love.html">Things I Love</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+        </div>
 
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Hasset Maemer. All rights reserved.</p>
-        <span class="footer-links">
-            <a href="mailto:adugnahasset@gmail.com" target="_blank"title="contact me via email">
-                <img src="images/email.jpg" alt="email"></a>
-            <a href="https://github.com/Hassetam" target="_blank" title="visit my GitHub profile">
-                <img src="images/github.jpg" alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" title="contact me via linkedin">
-                <img src="images/linkedin.jpg" alt="LinkedIn"></a>
-            <a href= "https://t.me/mamaa15" target="_blank" title="contact me via telegram">
-                <img src="images/telegram.jpg" alt="Telegram"></a>
-            <a href="https://www.instagram.com/hassuki.15/" target="_blank" title="contact me via instagram">
-                <img src="images/instagram.jpg" alt="Instagram"></a>
-        </span>
-    </footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
+            <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+</footer>
 </body>
 </html>
