--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>What I Love</title>
     <link rel="stylesheet" href="Styles/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!--Linking stylesheet and google font --->
 </head>
-<body>
+
+<body> <!-- Main body starts -->
+    <!-- Navigation bar with page links and social icons -->
     <nav>
         <span class="header-links">
             <a href="index.html">Home</a>
@@ -17,18 +20,19 @@
             <a href="contact.html">Contact</a>
         </span>
         <div class="social-icons">
-        <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
-        <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
-        <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-    </div>
+            <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
+            <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        </div>
     </nav>
 
+    <!-- Main heading -->
     <h1>What I Love</h1>
 
     <div class="home-container">
-        <!-- Left Text -->
+        <!-- Left section with welcome text -->
         <div class="left-content">
             <div class="one">Welcome!</div>
             <div class="two">
@@ -41,7 +45,7 @@
             </div>
         </div>
 
-        <!-- Right Slideshow -->
+        <!-- Right section with slideshow -->
         <div class="right-content">
             <div class="slider">
                 If life is this, then it's worth living.
@@ -61,27 +65,43 @@
         </div>
     </div>
 
-    <footer>
-        &copy; 2025 Hasset Maemer. All rights reserved.
-        <span class="footer-links">
-            <a href="mailto:adugnahasset@gmail.com" target="_blank" title="Email">
-                <img src="images/email.jpg" alt="email">
-            </a>
-            <a href="https://github.com/Hassetam" target="_blank" title="GitHub">
-                <img src="images/github.jpg" alt="GitHub">
-            </a>
-            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" title="LinkedIn">
-                <img src="images/linkedin.jpg" alt="LinkedIn">
-            </a>
-            <a href="https://t.me/mamaa15" target="_blank" title="Telegram">
-                <img src="images/telegram.jpg" alt="Telegram">
-            </a>
-            <a href="https://www.instagram.com/hassuki.15/" target="_blank" title="Instagram">
-                <img src="images/instagram.jpg" alt="Instagram">
-            </a>
-        </span>
-    </footer>
+    <!-- Footer with copyright and social icons-->
+   <footer>
+        <div class="footer-text">
+            &copy; 2025 Hasset Maemer. All rights reserved.
+        </div>
+
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="about me.html">About Me</a>
+            <a href="things i love.html">Things I Love</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
+        <div class="social-icons">
+            <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
+            <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+</footer>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
