--- a/contact.html
+++ b/contact.html
@@ -78,21 +78,21 @@
         <form action="#" method="get">
           <ol>
             <li class="question-block">
-              <p>1. Which way do you prefer to meet?</p>
+              <p> Which way do you prefer to meet?</p>
               <div class="choice-group">
                 <label><input type="radio" name="meeting_type" value="online" required> Online</label>
                 <label><input type="radio" name="meeting_type" value="in_person" required> In person</label>
               </div>
             </li>
             <li class="question-block">
-              <p>2. Which do you prefer?</p>
+              <p> Which do you prefer?</p>
               <div class="choice-group">
                 <label><input type="radio" name="session_time" value="morning" required> Morning session</label>
                 <label><input type="radio" name="session_time" value="afternoon" required> Afternoon session</label>
               </div>
             </li>
             <li class="question-block">
-              <p>3. Please select a time that works best for you:</p>
+              <p>Please select a time that works best for you:</p>
               <div class="choice-group">
                 <label><input type="radio" name="time_slot" value="10-11" required> 10:00 AM - 11:00 AM</label>
                 <label><input type="radio" name="time_slot" value="11-12" required> 11:00 AM - 12:00 PM</label>
@@ -101,7 +101,7 @@
               </div>
             </li>
             <li class="question-block">
-              <h3>4. Activities You Might Relate With Me</h3>
+              <h3>Activities You Might Relate With Me</h3>
               <table>
                 <thead>
                   <tr>
@@ -119,11 +119,11 @@
               </table>
             </li>
             <li class="question-block">
-              <label>5. On a range of 10, how much do you rate the time you spent on my website?</label>
+              <label> On a range of 10, how much do you rate the time you spent on my website?</label>
               <input type="number" min="1" max="10" required>
             </li>
             <li class="question-block">
-              <label for="range">6. How likely are you to try one of my hobbies?</label>
+              <label for="range">How likely are you to try one of my hobbies?</label>
               <input type="range" id="range" name="range" min="1" max="10" required>
             </li>
           </ol>
