--- a/things i love.html
+++ b/things i love.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Things I Love</title>
+
+    <!-- Link to external CSS file that styles this page -->
     <link rel="stylesheet" href="Styles/things i love.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- Link to Font Awesome library for icons (social media icons, etc.) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
-    <!-- Navigation bar and social icons are below. Main content starts after this section. -->
+    <!-- ======================== NAVIGATION BAR ======================== -->
+    <!-- Fixed navigation bar with links to different pages and social icons -->
     <nav>
+        <!-- Left section: navigation links -->
         <span class="header-links">
             <a href="index.html">Home</a>
             <a href="about me.html">About Me</a>
@@ -17,21 +24,30 @@
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </span>
+
+        <!-- Right section: social media icons -->
         <div class="social-icons">
-        <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
-        <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
-        <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-    </div>
+            <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://github.com/Hassetam" target="_blank" class="github"><i class="fab fa-github"></i></a>
+            <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+        </div>
     </nav>
-    <!-- Main content starts here -->
+
+    <!-- ======================== PAGE HEADER ======================== -->
+    <!-- Introduces the page with a title and a short description -->
     <header>
         <h1>Things I Love</h1>
         <p>Here I share my passions and interests that bring joy and meaning to my life. Explore my world!</p>
     </header>
 
+    <!-- MAIN CONTENT -->
+    <!-- The main body contains multiple "love-card" sections, 
+         each describing one thing I love with text and an image. -->
     <main>
+
+        <!-- 1. Spending Time with Loved Ones  -->
         <section class="love-card">
             <div class="text">
                 <h2>Spending Time with Loved Ones</h2>
@@ -42,6 +58,7 @@
             </div>
         </section>
 
+        <!--  2. Rest and Relaxation -->
         <section class="love-card">
             <div class="text">
                 <h2>Rest and Relaxation</h2>
@@ -52,6 +69,7 @@
             </div>
         </section>
 
+        <!-- 3. Challenges -->
         <section class="love-card">
             <div class="text">
                 <h2>Challenges</h2>
@@ -62,6 +80,7 @@
             </div>
         </section>
 
+        <!--  4. Movies  -->
         <section class="love-card">
             <div class="text">
                 <h2>Movies</h2>
@@ -72,6 +91,7 @@
             </div>
         </section>
 
+        <!-- 5. Traveling -->
         <section class="love-card">
             <div class="text">
                 <h2>Traveling</h2>
@@ -82,6 +102,7 @@
             </div>
         </section>
 
+        <!-- 6. Experimenting with Food  -->
         <section class="love-card">
             <div class="text">
                 <h2>Experimenting with Food</h2>
@@ -92,6 +113,7 @@
             </div>
         </section>
 
+        <!--  7. Photography & Nature  -->
         <section class="love-card">
             <div class="text">
                 <h2>Photography & Nature</h2>
@@ -103,12 +125,16 @@
         </section>
     </main>
 
- <!-- Footer with copyright and social icons-->
-   <footer>
+    <!--  FOOTER  -->
+    <!-- The footer repeats navigation links and social icons for easy access.
+         It also includes copyright information. -->
+    <footer>
+        <!-- Left: copyright -->
         <div class="footer-text">
             &copy; 2025 Hasset Maemer. All rights reserved.
         </div>
 
+        <!-- Middle: quick navigation links -->
         <div class="footer-links">
             <a href="index.html">Home</a>
             <a href="about me.html">About Me</a>
@@ -117,6 +143,7 @@
             <a href="contact.html">Contact</a>
         </div>
 
+        <!-- Right: repeated social media icons -->
         <div class="social-icons">
             <a href="https://www.instagram.com/hassuki.15" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://t.me/mamaa15" target="_blank" class="telegram"><i class="fab fa-telegram-plane"></i></a>
@@ -124,6 +151,7 @@
             <a href="mailto:adugnahasset@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/hasset-maemer-909b4a376/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
         </div>
-</footer>
+    </footer>
 </body>
 </html>
+
